# GEOFENCE

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.md  setup.py
config/: boundary.yaml
launch/: geofence_launch.py
resource/: geofence_flow.html  geofence_map.html  virtual_geofence
scripts/: plot_geofence.py
systemd/: geofence.service
virtual_geofence/: __init__.py  geofence_node.py  mock_gps_publisher.py  utils.py
